--- a/VRChat/46/1152446.html
+++ b/VRChat/46/1152446.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6q9lK+SYC8wmw6BLZSnwX1S5lJCwxyTyzAcyb3kdGxY="></script>
+    "g3P2Y7qyNjYlQVP4uuAmBcazDHiFe2ffxf3H19/7s3s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VrChat向け】長めのリボン","description":"Vrchat向けの長めのリボンです。\n\nunitypackageに入っています。DynamicBoneは設定済みです。\nテクスチャは白黒になっているのでマテリアルで色を変更できます。\nRibbon_UV.pngはテクスチャをいじるときの参考にお使いください。\nシェーダーはReflex Shader 2.0.1を想定しています。\nポリゴン数は1280です。\n\n改変、商用利用は可能です。\n\n無償有償に限らず再配布、販売やパブリックアバターへの使用は禁止します。\n\n当モデルを使用した際の如何なる不利益が発生した場合でも当方は一切責任を負いません。","url":"https://booth.pm/ja/items/1152446","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/15018b3f-e143-4dbf-bdbd-76137d5c20ea/i/1152446/2cd73e0b-15df-449c-aefb-ad836505b0b9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6q9lK+SYC8wmw6BLZSnwX1S5lJCwxyTyzAcyb3kdGxY="></script>
+    nonce="g3P2Y7qyNjYlQVP4uuAmBcazDHiFe2ffxf3H19/7s3s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,10 +161,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1152446/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1219
+                              1221
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1152446/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1219
+                              1221
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
