--- a/VRChat/57/1152257.html
+++ b/VRChat/57/1152257.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "7yiGwwtBkZl96Zl/EP4uunnSOrfvD3dZwnt+j5lc4wU="></script>
+    "Eibz98n0GdTBxgVqgXEcWoWG4YkCdkdTOSs0eiCkWt8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Unity2017対応VRC想定Clothスカートサンプル","description":"SelfCollisionを使用しているため、使用しない場合より4倍以上の負荷がかかります。\n2021年現在、この方法は古いため、販売を停止します。\n購入済みの方向けに価格を引き上げて再ダウンロード可能な状態にします。(500円→50000円)\n\nUnity2017にアップデートされたVRChatで使用想定のCloth設定のサンプルです。\nセルフコリジョンの調整により、多少の貫通を許容すれば150度まで足を上げても落ちてこないこともあります。\n頂点数削減により、分割版は96頂点、一体版も192頂点で\nAvatar Performance Ranking Systemに対応しています。\nセルフコリジョンの設定もしています。\nあまり理解せず乱用されると頂点数が少なくても重くなりますので、有償配布にします。\n何も無しにClothコンポーネントを1時間触るよりは得るものがあると思います...たぶん......\n\nライセンスなど:\n商用利用・再配布・改変など、自由に使用していただいて構いません。\nクレジット表記は不要ですが、報告貰えると嬉しいです。\nCloth全体のイメージにかかわりますので、無料ばら撒きは禁止します。\n\nその他不明瞭な点がございましたらご気軽にお問い合わせください。 \n本モデルデータの使用による損失・損害等は一切責任を負いかねます。\n\nTwitter：@Yuzuki_Tatikawa\n\n内容物:\nSkirtSample02.Unitypackage\nSkirtSample02.fbx\nSkirtSample02.png(使っているのは300*30px程度)\nライセンスなど.txt\n\n色々説明:\nサンプルで入れている、32ヒダプリーツスカートのUVは一致させており、1ヒダ分のテクスチャで割り当てていて、裾のヒダはα値で抜いています。\n分割版は殆ど動かないベルト部分を別オブジェクトにし、無理やり100頂点に収めているものですが、すべての姿勢において一体型に劣っているわけではなく、\n分割されていることにより貫通しない姿勢なども存在します。\n上記のスカートに対してClothのパラメータを独自に調整したものです。\n\nコライダーは3つ使用しています。\n\nVRCでは読み込み時のスカートの初期位置が謎挙動のため、\nスカートのClothコンポーネントを非アクティブにするアニメーションで足のウェイト位置にスカートをリセットするなどして、\n自身の入室時、新しい人が入室したときなど、リセットしてあげてください。\n\n絶対に貫通しないことは絶対に無いので、各自、ショートパンツ・ブルマ・タイツなど貫通しても目立たない衣服の併用をオススメします。\n\nパスワード:\nmeronpan\n\n2018.12.27 制定\n2021.03.15 販売停止(価格改定)","url":"https://booth.pm/ja/items/1152257","offers":{"priceCurrency":"JPY","@type":"Offer","price":"50000"},"image":"https://booth.pximg.net/c/620x620/398453f0-c317-488e-9f19-c38eb6274343/i/1152257/110fd6d8-4adb-474f-9ecb-179df949f30c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7yiGwwtBkZl96Zl/EP4uunnSOrfvD3dZwnt+j5lc4wU="></script>
+    nonce="Eibz98n0GdTBxgVqgXEcWoWG4YkCdkdTOSs0eiCkWt8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1152257/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               138
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1152257/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               138
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
