--- a/VRChat/75/1152175.html
+++ b/VRChat/75/1152175.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pLl5dvET3HAI8XPwSSZwtkR3Ki5S7C1wA49+oY6K5p4="></script>
+    "LzSxe6MTZxDBNUnjhacqTaFLQsO3pnc8hO2ntfqWF3Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け「鏡もち」","description":"老人の命を奪いに来るお正月の飾りです。\n\nこの鏡餅は主に個人がVRChatでアバターに装着したり、ワールドに置くことを想定しています。\n\nポリゴン数は全体で984、餅とみかんで784です。\n\nユニティパッケージになっています。\n","url":"https://booth.pm/ja/items/1152175","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1152175/933c65a0-1e81-483f-836c-f0f0e23a584c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pLl5dvET3HAI8XPwSSZwtkR3Ki5S7C1wA49+oY6K5p4="></script>
+    nonce="LzSxe6MTZxDBNUnjhacqTaFLQsO3pnc8hO2ntfqWF3Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1152175/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               92
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1152175/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               92
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
