--- a/VRChat/01/1151701.html
+++ b/VRChat/01/1151701.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "S+yyoya8JN2338PW1qor1UCSixofllfIU8f1Yox9V+I="></script>
+    "zgiLWsoU8UOc35N6sBIgj/mBIoERL4NJ+rGNtncoZXY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【ボクセルモデル】よわよわドラゴンリリー","description":"\n～アバター製作15体目よわよわドラゴンリリーちゃん～\n\n最終更新日2020/07/27\n\n[性別]～おんなのこ～\n[性格]～やさしい～\n[製作者]https://www.youtube.com/channel/UCw8V1-vKkEWPzMaIJgMICpw\n\n内容物に不備がございましたので修正いたしました。\n\n\n","url":"https://booth.pm/ja/items/1151701","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/a2a92648-5828-4c7e-841d-4ba2cd74af64/i/1151701/f609c609-f08b-49bc-97d8-8699458704cb_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="S+yyoya8JN2338PW1qor1UCSixofllfIU8f1Yox9V+I="></script>
+    nonce="zgiLWsoU8UOc35N6sBIgj/mBIoERL4NJ+rGNtncoZXY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1151701/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1151701/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               8
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
