--- a/VRChat/86/1150686.html
+++ b/VRChat/86/1150686.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/0DQqOt2Yl1bJkqdVA/S5MISDd7kbyY0PMnwVvmmb/w="></script>
+    "VAOJTZMYYeZyvQ42XpMtCLEL5VGyc9LDPNUgJyQ2f/0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"モラトリア・クラスタ V3【オリジナル3Dモデル】","description":"Ver_3.10にアップデートしました！\n新髪型「ショートヘア」＆さら髪テクスチャの追加、ほか不具合修正が行われています。\n※アップデートの際は必ず既存のデータのバックアップを取ってから行ってください。\n\n◆VRChatにて、こちらからアバターの試着が可能です！\nhttps://vrchat.com/home/launch?worldId=wrld_ba2a39ee-7e10-4b8c-a82f-27a2f2f6d5c0 \n\nVRソーシャル等で使用できるオリジナル3Dモデルです。\nVRChatでの使用を想定したセットアップがされていますが、他VRソーシャルでの使用やVRMに変換して各サービスでの使用が可能です。\n\n利用規約はこちらからプレビューが可能です。\nhttps://drive.google.com/drive/folders/1i7J8KusIEN2bLW_aNT-wVRjHGbUdleec?usp=sharing\n\n前バージョン「新世モラトリア」を購入していただいた方も、本バージョン以降のアップデートを継続的に無償で利用可能です。","url":"https://booth.pm/ja/items/1150686","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/c0a72cc4-55c2-42d7-8acf-052eee064242/i/1150686/65555559-48dd-42be-b41d-9499b29019f9_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/0DQqOt2Yl1bJkqdVA/S5MISDd7kbyY0PMnwVvmmb/w="></script>
+    nonce="VAOJTZMYYeZyvQ42XpMtCLEL5VGyc9LDPNUgJyQ2f/0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -178,7 +178,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1150686/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               781
@@ -193,14 +193,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1150686/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               781
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
