--- a/VRChat/18/1151718.html
+++ b/VRChat/18/1151718.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "uZ9uxTPbXG4AmOEIWLDTXhTBdrMsVUmrnaxZnDDLAjo="></script>
+    "wBqUaVhTE9hbTRujZ0/Q2jXkmT4qS8T9X/XxooSMhPY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ハイポリネックレスチェーン(シルバー/ゴールド)","description":"ハイポリネックレスチェーン　紹介文\n\n指輪や宝石を胸に飾る際に役立つ、ゴールド・シルバーネックレスチェーンです。\n先端にバチカン(飾りをチェーンに通すための金具)が付いており、シェイプキーで消せます。\nポリゴン数がかなり多い分、近くで見ても滑らかです。\n陰影を焼きこんだテクスチャが付属しており、任意のシェーダーを使用いただけます。\n\nポリゴン数△15034","url":"https://booth.pm/ja/items/1151718","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/1eb19d48-5626-4195-a111-a028c8b98f15/i/1151718/58439f71-e703-4c7a-88bb-9b63ee3b90f6_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uZ9uxTPbXG4AmOEIWLDTXhTBdrMsVUmrnaxZnDDLAjo="></script>
+    nonce="wBqUaVhTE9hbTRujZ0/Q2jXkmT4qS8T9X/XxooSMhPY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1151718/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               205
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1151718/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               205
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
