--- a/VRChat/92/1151092.html
+++ b/VRChat/92/1151092.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XpQSsM0pKBBdS+8UYiccZK3g9u70qHvqjxDvahr2h84="></script>
+    "nuAJSPAXGtKt/rYhol8CAo7U4aZND5O8g3b/zqU6GMg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けオリジナル3Dモデル『NANAMI』","description":"VRChat対応3Dモデル NANAMI\n\n※仕様が古いため正常な動作を保証できません。ご自分で修正して使用できる方のみ自己責任でのご購入をお願いします。\n\n■更新履歴\n2018年12月27日　公開\n2019年5月30日\n・シェーダー設定の変更\n・素体メッシュ追加\n・アニメーションの追加\n・腕を伸びるように修正しました\n・マテリアルが４つになりました\n\n\n\n■概要\n\nVRChatでのアバター利用を想定して作られたモデルです。\n\n\nUnityPackageをインポート、Sceneファイルを開くだけでお手軽にアップロード準備できます(シェーダー、DynamicBone、VRC用アイトラッキング、リップシンクが自動であたります)\n\n\n●注意点\n事前にUnityのプロジェクト内に導入しておくもの\n・VRCSDK\n・DynamicBone\n・ユニティちゃんトゥーンシェーダー2.0.7.5\n\n各種シェイプキーはBodyメッシュに入っています\n\n\n動作確認はVRChatデスクトップモード､VR(WindowsMR)のみです。それ以外の環境での動作は保証できませんのでご了承ください\n\n■同梱データ\n・モデルデータ(fbx*2)\n\n・テクスチャ、matcap、ノーマルマップデータ(png*14)\n\n・まとめて導入用unitypackage(unitypackage*1)\n\n・Sceneファイル(unity*1)\n\n\n■利用規約\n・本データをご利用いただいた時点で利用規約に同意したものとみなします。\n\n・著作権は放棄していません。\n\n・配信、動画での商用利用は個人、法人に限らず可能です。\n\n・改変、改造は可能です(R18/R18G共に許可しますが自己責任でお願い致します)\n\n・本データの転載、再配布、ペデスタル利用を禁止します。(本データの一部を使用したもの不可)\n\n・宗教、政治活動での使用禁止します。\n\n■免責事項\n・本モデルに関連するファイルを使用して生じた不利益やトラブル等の一切の責任を負いません。\n\n\n・利用規約は予告なく変更・改定される事があります。\n\n\n\n■連絡先\nTwitter :　@killmachine1014","url":"https://booth.pm/ja/items/1151092","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/e1da7fe2-4e87-4ba0-85db-2a5eaedc6c78/i/1151092/5b265da9-ab1d-4d31-b554-a5f878660c33_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XpQSsM0pKBBdS+8UYiccZK3g9u70qHvqjxDvahr2h84="></script>
+    nonce="nuAJSPAXGtKt/rYhol8CAo7U4aZND5O8g3b/zqU6GMg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1151092/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               173
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1151092/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               173
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
